--- a/stairs.html
+++ b/stairs.html
@@ -289,7 +289,7 @@
           <i class="fab fa-facebook"></i>
         </a>
         <!-- Instagram Link -->
-        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_/" href="https://www.instagram.com/maxidom_/" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
       </div>
@@ -310,10 +310,10 @@
         "postalCode": "M4G 3E7",
         "streetAddress": "720-7 Copeland St"
       },
-      "email": "info@maxidom.ca",
+      "email": "info@maxidom.net",
       "telephone": "+1 647 774 5321",
       "name": "Maxidom",
-      "url" : "https://www.maxidom.ca/",
+      "url" : "https://www.maxidom.net/",
       "BN": "01750420935",
       "logo": "https://www.maxidom.ca/img/share/logo.png"
     }
