--- a/renovation.html
+++ b/renovation.html
@@ -22,14 +22,14 @@
   <link rel="mask-icon" href="fonts/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#272727">
-  <meta property="og:url" content="https://www.maxidom.ca/">
+  <meta property="og:url" content="https://www.maxidom.net/">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_EN">
   <meta property="og:image" content="images/facebook.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="627">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:url" content="https://www.maxidom.ca/">
+  <meta name="twitter:url" content="https://www.maxidom.net/">
   <meta name="twitter:image" content="https://www.maxidom.ca/images/share/facebook.jpg">
   
   <!-- CSS Stylesheets -->
@@ -273,7 +273,7 @@
           <i class="fab fa-facebook"></i>
         </a>
         <!-- Instagram Link -->
-        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_/" href="https://www.instagram.com/maxidom_/" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
       </div>
@@ -298,9 +298,9 @@
     "email": "info@maxidom.ca",
     "telephone": "+1 647 774 5321",
     "name": "Maxidom",
-    "url" : "https://www.maxidom.ca/",
+    "url" : "https://www.maxidom.net/",
     "BN": "01750420935",
-    "logo": "https://www.maxidom.ca/img/share/logo.png"
+    "logo": "https://www.maxidom.net/img/share/logo.png"
   }
 </script>
 
