--- a/the-process.html
+++ b/the-process.html
@@ -283,7 +283,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
     </div>
   </div>
   <div class="parallax-container parallax-container--top-left">
-    <div class="parallax parallax-title" data-rellax-speed="2" data-rellax-percentage="0.3">Begin the Job</div>
+    <div class="parallax parallax-title" data-rellax-speed="2" data-rellax-percentage="0.3">Begin the Work</div>
   </div>
 </section>
 
