meta description updates

--- a/cabinetry.html
+++ b/cabinetry.html
@@ -2,10 +2,10 @@
 <html class="no-js" lang="en" dir="ltr">
 <head>
   <!-- Title of the page -->
-  <title>Cabinetry Installation | Maxidom</title>
+  <title>Custom Cabinetry Installation in the Greate Toronto Area | Maxidom</title>
 
   <!-- Meta description for SEO -->
-  <meta name="description" content="Maxidom: Installing custom, precision-built cabinetry">
+  <meta name="description" content="Maxidom specializes in custom cabinetry installation in the Greater Toronto Area, offering precision-built kitchen cabinets, bathroom vanities, laundry room cabinets, and custom furniture for high-end homes.">
 
   <!-- Open Graph meta tags for social media sharing -->
   <meta property="og:site_name" content="Cabinetry Installation | Maxidom">
@@ -223,7 +223,7 @@
           <div class="pageTop__container">
             <div class="container">
               <h1 class="pageTop__title">
-                Custom Cabinetry  
+                Custom Cabinetry Installation   
                 <span class="reveal_title"></span>
               </h1>
               <div class="pageTop__subtitle">
