--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html><html class="no-js" lang="en" dir="ltr">
   <head>
   <title>Maxidom: Finishing Carpentry Services</title>
