--- a/finishing-carpentry.html
+++ b/finishing-carpentry.html
@@ -2,10 +2,10 @@
 <html class="no-js" lang="en" dir="ltr">
 <head>
   <!-- Title of the page -->
-  <title>Crafting exquisite, detailed finishing touches | Maxidom</title>
+  <title>High end Interior Trim Work in Greater Toronto Area | Maxidom</title>
 
   <!-- Meta description for SEO -->
-  <meta name="description" content="Maxidom: Interior trim defines and enhances spaces across diverse design preferences: elegant, minimal, contemporary. The exceptional quality and variety of our trim work ensure a perfect match for any interior style requirement.">
+  <meta name="description" content="Maxidom offers luxury interior trim work in Toronto, including baseboard and casing installation, wainscoting, crown molding, wall paneling, and custom fireplace mantels for high-end homes.">
 
   <!-- Open Graph meta tags for social media sharing -->
   <meta property="og:site_name" content="Crafting exquisite, detailed finishing touches | Maxidom">
@@ -33,7 +33,7 @@
   <!-- Open Graph tags for the page URL, type, locale, and image -->
   <meta property="og:url" content="https://www.maxidom.net/">
   <meta property="og:type" content="website">
-  <meta property="og:locale" content="it_IT">
+  <meta property="og:locale" content="en_EN">
   <meta property="og:image" content="images/facebook.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="627">
@@ -216,7 +216,7 @@
           <div class="pageTop__container">
             <div class="container">
               <h1 class="pageTop__title">
-                Interior trim work
+                Hight end Interior trim work
                 <span class="reveal_title"></span>
               </h1>
               <div class="pageTop__subtitle">
