modified the title and Meta descriptions

--- a/crown.html
+++ b/crown.html
@@ -3,8 +3,8 @@
   
 <head>
   <!-- Title of the Page -->
-  <title>Crown Molding: You dream it, we build it. | Maxidom</title>
-  <meta name="description" content="Maxidom: The perfect type and style of crown moulding that suits your specific needs.">
+  <title>Custom Crown Molding Installation in the GTA | Maxidom</title>
+  <meta name="description" content="Maxidom offers custom crown molding installation in the Greater Toronto Area, enhancing high-end homes with traditional, modern, flat, and simple crown molding designs.">
   
   <!-- Open Graph Meta Tags for social media sharing -->
   <meta property="og:site_name" content="Crown Molding Ideas Crafting Refinement | Maxidom">
