--- a/doors.html
+++ b/doors.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en" dir="ltr">
 <head>
-  <title>Interior Doors Fitting | Maxidom</title>
+  <title>Interior Door Installation Services in the GTA | Maxidom</title>
   <!-- Meta descriptions for search engines and social media -->
-  <meta name="description" content="Maxidom, Whether it’s interior swing doors, sliding doors, pocket doors, or bifold doors, we promise a seamless and precise installation">
+  <meta name="description" content="Maxidom provides expert interior door installation services in the Greater Toronto Area, including swing doors, sliding doors, pocket doors, barn doors, and bifold doors for high-end homes.">
   <meta property="og:site_name" content="Interior Doors Fitting | Maxidom">
   <meta property="og:title" content="Interior Doors Fitting | Maxidom">
-  <meta property="og:description" content="Maxidom, Whether it’s interior swing doors, sliding doors, pocket doors, or bifold doors, we promise a seamless and precise installation.">
+  <meta property="og:description" content="Maxidom provides expert interior door installation services in the Greater Toronto Area, including swing doors, sliding doors, pocket doors, barn doors, and bifold doors for high-end homes.">
   <meta name="twitter:title" content="Interior Doors Fitting | Maxidom">
-  <meta name="twitter:description" content="Maxidom,  Whether it’s interior swing doors, sliding doors, pocket doors, or bifold doors, we promise a seamless and precise installation">
+  <meta name="twitter:description" content="Maxidom provides expert interior door installation services in the Greater Toronto Area, including swing doors, sliding doors, pocket doors, barn doors, and bifold doors for high-end homes.">
   
   <!-- Character set and viewport settings -->
   <meta charset="UTF-8">
