--- a/contacts.html
+++ b/contacts.html
@@ -47,7 +47,7 @@
 <body>
   <!-- No JavaScript Warning -->
   <noscript>
-    <p style="position: relative; z-index: 999999; color: white;">Wait a minute... No Javascript?? It's like eating a pizza with pineapple. No way.</p>
+    <p style="position: relative; z-index: 999999; color: white;">Wait a minute.... No Javascript?? It's like eating a pizza with pineapple.. No way!</p>
   </noscript>
 
   <!-- Cursor Effects -->
